Refatorando algumas partes do código